--- a/04-Nautobot-network-importer/docker-compose.yml
+++ b/04-Nautobot-network-importer/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - "./network_importer/local.env"
     depends_on:
       - "batfish"
+    volumes:
+      - "../../network-importer-fork/network_importer/:/usr/local/lib/python3.9/site-packages/network_importer/"
+    
     extra_hosts:
       - "host.docker.internal:host-gateway"
     networks:
