--- a/04-Nautobot-network-importer/network_importer/Dockerfile
+++ b/04-Nautobot-network-importer/network_importer/Dockerfile
@@ -4,7 +4,7 @@ FROM python:${PYTHON_VERSION}
 
 RUN pip install --upgrade pip
 
-RUN git clone https://github.com/networktocode/network-importer.git --branch v3.1.1
-RUN pip install network-importer==3.1.0
-
+RUN git clone https://github.com/mspiez/network-importer.git
 WORKDIR /network-importer
+
+RUN pip install .
