Tutorial 02 Nautobot setup: use poetry as installation method

--- a/02-Nautobot-setup/nautobot/local.env
+++ b/02-Nautobot-setup/nautobot/local.env
@@ -1,8 +1,8 @@
 # ---------------------
 # PYTHON_VER is used for which version of Python to use. Check hub.docker.com for the available versions
 # ---------------------
-NAUTOBOT_PYTHON_VERSION=3.9
-NAUTOBOT_VERSION=2.1.1
+NAUTOBOT_PYTHON_VERSION=3.11
+NAUTOBOT_VERSION=2.2.7
 
 # This should be limited to the hosts that are going to be the web app.
 # https://docs.djangoproject.com/en/3.2/ref/settings/#allowed-hosts
@@ -59,3 +59,6 @@ NAUTOBOT_SUPERUSER_API_TOKEN=0123456789abcdef0123456789abcdef01234567
 
 ARISTA_USERNAME=admin
 ARISTA_PASSWORD=admin
+
+NAPALM_USERNAME=admin
+NAPALM_PASSWORD=admin
