--- a/02-Nautobot-setup/nautobot/docker-compose.yml
+++ b/02-Nautobot-setup/nautobot/docker-compose.yml
@@ -6,17 +6,17 @@ services:
     build:
       args:
         PYTHON_VER: "${PYTHON_VER}"
-      context: ./source
-      dockerfile: docker/Dockerfile
+      context: .
+      dockerfile: Dockerfile
       target: dev
-    image: "nautobot:${NAUTOBOT_VERSION}"
+    image: "nautobot:latest"
     ports:
       - "8080:8080"
     volumes:
       - "media_root:/opt/nautobot/media"
-      - "./nautobot/populate_data.py:/source/scripts/populate_data.py"
-      - "./nautobot/nautobot_config.py:/opt/nautobot/nautobot_config.py"
-      - ./source/:/source
+      - "./populate_data.py:/source/scripts/populate_data.py"
+      - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
+      - "./pkg:/source/pkg"
     networks:
       - automation_net
     depends_on:
@@ -27,7 +27,7 @@ services:
       db:
         condition: service_healthy
     env_file:
-      - "./nautobot/local.env"
+      - "./local.env"
     tty: true
     healthcheck:
       interval: 5s
@@ -41,13 +41,13 @@ services:
         - "http://localhost:8080/health/"
   celery_worker:
     container_name: celery_worker_lab
-    image: "nautobot:${NAUTOBOT_VERSION}"
+    image: "nautobot:latest"
     ports:
       - "8081:8080"
     volumes:
       - media_root:/opt/nautobot/media
-      - "./nautobot/nautobot_config.py:/opt/nautobot/nautobot_config.py"
-      - ./source/:/source
+      - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
+      - "./pkg:/source/pkg"
     networks:
       - automation_net
     entrypoint: "watchmedo auto-restart --directory './' --pattern '*.py' --recursive -- nautobot-server celery worker -l INFO --events"
@@ -67,15 +67,15 @@ services:
       redis:
         condition: service_started
     env_file:
-      - "./nautobot/local.env"
+      - "./local.env"
     tty: true
   celery_beat:
     container_name: celery_beat_lab
-    image: "nautobot:${NAUTOBOT_VERSION}"
+    image: "nautobot:latest"
     entrypoint: "nautobot-server celery beat -l INFO"
     volumes:
-      - "./nautobot/nautobot_config.py:/opt/nautobot/nautobot_config.py"
-      - ./source/:/source
+      - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
+      - "./pkg:/source/pkg"
     networks:
       - automation_net
     healthcheck:
@@ -86,7 +86,7 @@ services:
       redis:
         condition: service_started
     env_file:
-      - "./nautobot/local.env"
+      - "./local.env"
     tty: true
   redis:
     container_name: redis_lab
@@ -98,7 +98,7 @@ services:
     networks:
       - automation_net
     env_file:
-      - "./nautobot/local.env"
+      - "./local.env"
   selenium:
     container_name: selenium_lab
     image: selenium/standalone-firefox:4.9.1
@@ -112,7 +112,7 @@ services:
     container_name: db_lab
     image: postgres:13
     env_file:
-      - "./nautobot/local.env"
+      - "./local.env"
     volumes:
       - pgdata_nautobot:/var/lib/postgresql/data
     networks:
@@ -126,7 +126,7 @@ services:
     container_name: mkdocs_lab
     profiles:
       - mkdocs
-    image: "local/nautobot-dev:local-py${PYTHON_VER}"
+    image: "nautobot:latest"
     entrypoint: "mkdocs serve -a '0.0.0.0:8001'"
     networks:
       - automation_net
