--- a/05-Nautobot-custom-plugin-installation/nautobot/local.env
+++ b/05-Nautobot-custom-plugin-installation/nautobot/local.env
@@ -59,3 +59,7 @@ NAUTOBOT_SUPERUSER_API_TOKEN=0123456789abcdef0123456789abcdef01234567
 
 ARISTA_USERNAME=admin
 ARISTA_PASSWORD=admin
+
+# GITLAB
+GITLAB_TOKEN=glpat-szb6b4YsuycUbsot_Dh4
+
